@@ -1,3 +1,7 @@
+Wed Feb 10 12:35:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSClipView.m:  Tidy flip-view errors by Benhur
+
 Wed Feb 10 10:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSCell.m: ([-copyWithZone:]) Fixed memory leak - was copying
